MDEV-29620 Assertion `next_insert_id == 0' failed in handler::ha_external_lock

ha_release_auto_increment() must be done before F_UNLCK.
Non-atomic case is handled by select_insert::binlog_query().